pagination is now responsive and minor subnav z-index issue is fixed

--- a/app/assets/stylesheets/searchSubnav.css
+++ b/app/assets/stylesheets/searchSubnav.css
@@ -85,7 +85,6 @@
 		top: 107px;
 		position: fixed;
 		width: 100%;
-		z-index: 1;
 	}
 }
 @media only screen and (max-width: 575px) {
